--- a/app/src/main/res/layout/selectremindcycle_pop_window.xml
+++ b/app/src/main/res/layout/selectremindcycle_pop_window.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?title_text_color"
-                android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#00000000"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -12,127 +12,146 @@
         android:layout_marginBottom="0dp"
         android:background="?title_text_color"
         android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
 
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_10"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="取消"
+                android:padding="@dimen/dp_10"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_drugcycle_sure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="@string/cycle_sure"
+                android:padding="@dimen/dp_10"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+
+            android:background="@color/line"></View>
         <TextView
             android:id="@+id/tv_drugcycle_once"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
             android:drawableRight="@null"
             android:text="只响一次"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
-
-       <View
-           android:layout_width="match_parent"
-           android:layout_height="1dp"
-           android:layout_marginLeft="@dimen/dp_10"
-           android:layout_marginRight="@dimen/dp_10"
-           android:background="@color/line"></View>
-
-        <TextView
-            android:id="@+id/tv_drugcycle_0"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:drawableRight="@null"
-            android:text="每天"
-            android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
+            android:background="@color/line"></View>
+
+        <TextView
+            android:id="@+id/tv_drugcycle_0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_10"
+            android:drawableRight="@null"
+            android:text="每天"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="@dimen/dp_10"
             android:background="@color/line"></View>
 
         <TextView
             android:id="@+id/tv_drugcycle_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
             android:drawableRight="@null"
             android:text="@string/mon"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
             android:background="@color/line"></View>
 
         <TextView
             android:id="@+id/tv_drugcycle_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
             android:drawableRight="@null"
             android:text="@string/tue"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
             android:background="@color/line"></View>
 
         <TextView
             android:id="@+id/tv_drugcycle_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
             android:drawableRight="@null"
             android:text="@string/wed"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
             android:background="@color/line"></View>
 
         <TextView
             android:id="@+id/tv_drugcycle_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
             android:drawableRight="@null"
             android:text="@string/thu"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
             android:background="@color/line"></View>
 
         <TextView
             android:id="@+id/tv_drugcycle_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
             android:drawableRight="@null"
             android:text="@string/fri"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
@@ -145,12 +164,12 @@
             android:id="@+id/tv_drugcycle_6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
             android:drawableRight="@null"
             android:text="@string/sat"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -162,38 +181,14 @@
             android:id="@+id/tv_drugcycle_7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:padding="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_20"
             android:drawableRight="@null"
             android:text="@string/sun"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
-            android:background="@color/line"></View>
 
-        <TextView
-            android:id="@+id/tv_drugcycle_sure"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:drawableRight="@null"
-            android:gravity="center"
-            android:text="@string/cycle_sure"
-            android:textColor="@color/white"
-            android:textSize="20sp"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
-            android:layout_marginBottom="@dimen/dp_20"
-            android:background="@color/line"></View>
     </LinearLayout>
 
 </RelativeLayout>
