--- a/app/src/main/res/layout/fragment_alarm_clock_ontime.xml
+++ b/app/src/main/res/layout/fragment_alarm_clock_ontime.xml
@@ -1,14 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.clock.AlarmClockOntimeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    android:layout_height="match_parent">
+    <!--动态设置背景壁纸，会导致异步回调后再设置数据显示不出来，必须设置数据后才能再动态设置壁纸-->
+    <com.healthclock.healthclock.widget.MySlidingView
+        android:id="@+id/my_sliding_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@color/black_trans50"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/ontime_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-thin"
+            android:gravity="center"
+            android:textColor="@color/white_trans90"
+            android:textSize="80sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/ontime_tag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:lines="2"
+                android:text="@string/alarm_clock"
+                android:textColor="@color/white_trans90"
+                android:textSize="26sp"/>
+
+            <TextView
+                android:id="@+id/ontime_nap"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="13dp"
+                android:paddingTop="13dp"
+                android:textColor="@color/blue_green"
+                android:textSize="22sp"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/sliding_tip_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="20dp"
+            android:drawableLeft="@drawable/anim_sliding_tip"
+            android:drawablePadding="5dp"
+            android:gravity="center"
+            android:text="@string/close_alarm_clock"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
+
+
+    </com.healthclock.healthclock.widget.MySlidingView>
 </FrameLayout>
