--- a/app/src/main/res/layout/lv_alarm_clock.xml
+++ b/app/src/main/res/layout/lv_alarm_clock.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
+ android:layout_margin="@dimen/dp_5"
     app:mrl_rippleColor="@color/white">
 
     <LinearLayout
