--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,9 @@
     <color name="white_trans30">#4dffffff</color>
     <color name="white_trans20">#33ffffff</color>
     <color name="black_trans20">#33000000</color>
-
+    <color name="black_trans50">#80000000</color>
+    <color name="white_trans90">#e6ffffff</color>
+    <color name="blue_green">#0CCDF6</color>
 
     <!--主题背景色-->
     <color name="default_window_background">#F7F7F7</color>
