--- a/app/src/main/res/layout/fragment_local_music.xml
+++ b/app/src/main/res/layout/fragment_local_music.xml
@@ -4,17 +4,15 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical" >
-
     <ListView
-        android:id="@+id/list"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ListView>
 
     <TextView
         android:id="@android:id/empty"
-        android:visibility="gone"
         style="@style/ring_select_no_file_tv"
-        android:text="@string/no_local_music_file" />
+        android:text="@string/no_system_ring_file" />
 
 </FrameLayout>
