--- a/app/src/main/res/layout/activity_my_alarm_clock.xml
+++ b/app/src/main/res/layout/activity_my_alarm_clock.xml
@@ -17,7 +17,7 @@
         android:paddingTop="@dimen/dp_20">
 
         <com.healthclock.healthclock.widget.IconFontTextView
-            android:id="@+id/tv_scan"
+            android:id="@+id/tv_back"
             android:layout_width="@dimen/topbar_icon_width_height"
             android:layout_height="match_parent"
             android:layout_marginLeft="5px"
@@ -77,7 +77,28 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="按右上的  "
+                android:textColor="@color/white_trans90"
+                android:textSize="18sp"/>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_new"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="  添加闹钟  "
+                android:textColor="@color/white_trans90"
+                android:textSize="18sp"/>
         </LinearLayout>
     </FrameLayout>
 </LinearLayout>
