--- a/app/src/main/res/layout/topbar_nor.xml
+++ b/app/src/main/res/layout/topbar_nor.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="5px"
         android:gravity="center"
+        android:visibility="gone"
         android:text="@string/ic_back"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_26" />
